--- a/localgov_subsites_extras.services.yml
+++ b/localgov_subsites_extras.services.yml
@@ -1,4 +1,4 @@
 services:
-  localgov_menu_subsites.service:
-    class: Drupal\localgov_menu_subsites\Service\SubsiteService
+  localgov_subsites_extras.service:
+    class: Drupal\localgov_subsites_extras\Service\SubsiteService
     arguments: ['@entity_type.manager', '@plugin.manager.menu.link', '@current_route_match', '@config.factory']
